--- a/OneDrive/Desktop/portfolio/frontend/src/App.css
+++ b/OneDrive/Desktop/portfolio/frontend/src/App.css
@@ -1,7 +1,3 @@
-/* .App {
-  text-align: center;
-} */
-
 .section {
   width: 100vw;
   height: 100vh;
@@ -73,7 +69,6 @@
   color: white;
   padding: 10px 20px;
   text-decoration: none;
-  /* border-radius: 20px; */
   font-size: 16px;
   cursor: pointer;
   margin-top: 20px;
@@ -90,8 +85,49 @@
   background-color: #f8f9fa;
 }
 
+/* GENERAL STYLES */
+.section {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  scroll-snap-align: start;
+  scroll-snap-type: y mandatory;
+}
+
+/* ABOUT ME PAGE */
 #about-me {
   background-color: #e9ecef;
+  display: flex;
+  align-items: center; /* Center vertically */
+  justify-content: center; /* Center horizontally */
+}
+
+/* LEFT CONTENT */
+.left-content {
+  width: 50%;
+  padding-right: 20px; /* Space between content and map */
+}
+
+/* MAP CONTAINER */
+.map-container {
+  width: 500px; /* Fixed width */
+  height: 750px; /* Fixed height */
+  display: flex;
+  align-items: center; /* Center vertically */
+  justify-content: center; /* Center horizontally */
+  border: solid 2px #00FFD9;
+  box-shadow: 5px 5px 40px gray;
+}
+
+/* Ensure the map fills its container */
+.map-container .leaflet-container {
+  width: 100%; /* Make sure the map fills its container */
+  height: 100%; /* Make sure the map fills its container */
+}
+
+.aboutme-header {
 }
 
 #work-projects {
