--- a/OneDrive/Desktop/portfolio/frontend/src/App.css
+++ b/OneDrive/Desktop/portfolio/frontend/src/App.css
@@ -1,4 +1,3 @@
-/* Container for sections */
 .section {
   width: 100vw;
   height: 100vh;
@@ -9,79 +8,79 @@
   scroll-snap-type: y mandatory;
 }
 
-/* WORK / PROJECTS PAGE */
+
+/* ABOUT ME PAGE */
+#about-me {
+  background-color: #e9ecef;
+  display: flex;
+}
+
+/* LEFT CONTENT */
+.left-content {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; /* Aligns items at the top */
+}
+
+.profile-img {
+  border-radius: 50%;
+  height: 250px;
+  width: 250px;
+  align-self: center;
+  margin-top: 15%;
+}
+
+.aboutme-header {
+  padding-left: 20%;
+}
+
+.about-section {
+  padding-left: 20%;
+}
+
+.experience-header {
+  padding-left: 20%;
+}
+
+.experience-section {
+  padding-left: 20%;
+}
+
+.travel-header {
+  position: absolute;
+  top: 101%;
+  left: 69%;
+}
+
+/* RIGHT CONTENT */
+.right-content {
+  width: 50%;
+  display: flex;
+  align-items: center; /* Centers map vertically */
+  justify-content: center; /* Centers map horizontally */
+}
+
+/* MAP CONTAINER */
+.map-container {
+  width: 500px; /* Fixed width */
+  height: 750px; /* Fixed height */
+  display: flex;
+  align-items: center; /* Centers map vertically */
+  justify-content: center; /* Centers map horizontally */
+  border: solid 2px #00FFD9;
+  box-shadow: 5px 5px 40px gray;
+}
+
+/* Ensure the map fills its container */
+.map-container .leaflet-container {
+  width: 100%; /* Make sure the map fills its container */
+  height: 100%; /* Make sure the map fills its container */
+}
+
 #work-projects {
-  background-color: #f9f9f9;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  min-height: 100vh;
-}
-
-#work-projects h1 {
-  margin: 0;
-  padding: 20px 0;
-  font-size: 2.5em;
-  color: #333;
-  text-align: center;
-  padding-bottom: 175px;
-}
-
-.projects-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-/* PROJECT CARD STYLES */
-.project-card {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.project-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.project-content {
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.project-title {
-  margin: 0;
-  font-size: 1.5em;
-  color: #333;
-}
-
-.project-description {
-  font-size: 1em;
-  color: #666;
-  margin: 10px 0;
-  flex-grow: 1;
-}
-
-.project-link {
-  margin-top: auto;
-  color: #007bff;
-  text-decoration: none;
-}
-
-.project-link:hover {
-  text-decoration: underline;
+  background-color: #dee2e6;
 }
 
 #skills {
