--- a/OneDrive/Desktop/portfolio/frontend/src/AboutMe.css
+++ b/OneDrive/Desktop/portfolio/frontend/src/AboutMe.css
@@ -21,13 +21,14 @@
 }
 
 /* Title styling */
-.aboutme-header {
+.about-header {
   font-size: 2rem; /* Adjust font size as needed */
   color: #333; /* Adjust text color if needed */
   padding: 0 20px; /* Space between text and lines */
   white-space: nowrap; /* Prevent text from wrapping */
   position: relative; /* Ensure title is above the lines */
   z-index: 1; /* Keep title on top */
+  left: 38%;
 }
 
 /* Left and right lines styling */
@@ -42,17 +43,17 @@
 
 /* Left line */
 .aboutme-header-container::before {
-  left: 0; /* Align left line to the start of the container */
-  width: 198px; /* Length of the left line */
-  margin-left: 20px; /* Space from the left edge of the container */
+  left: 9%;
+  width: 300px;
+  margin-left: 20px;
 }
 
 /* Right line */
 .aboutme-header-container::after {
   right: 0; /* Align right line to the end of the container */
-  left: 35%; /* Position to the right of the title */
+  left: 559px; /* Position to the right of the title */
   margin-left: 20px; /* Space between line and title */
-  width: 450px; /* Length of the right line */
+  width: 300px; /* Length of the right line */
 }
 
   /* LEFT CONTENT */
