--- a/OneDrive/Desktop/portfolio/frontend/src/AboutMe.css
+++ b/OneDrive/Desktop/portfolio/frontend/src/AboutMe.css
@@ -1,6 +1,6 @@
 /* ABOUT ME PAGE */
 #about-me {
-    background-color: #e9ecef;
+    background-color:  rgb(233, 232, 241);
     display: flex;
     position: relative;
   }
@@ -63,14 +63,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-  }
-  
-  .profile-img {
-    border-radius: 50%;
-    height: 250px;
-    width: 250px;
-    align-self: center;
-    margin-top: 15%;
+    margin-top: 150px;
   }
   
   .aboutme-header, .about-section, .experience-header, .experience-section {
