--- a/OneDrive/Desktop/portfolio/frontend/src/Work.css
+++ b/OneDrive/Desktop/portfolio/frontend/src/Work.css
@@ -1,6 +1,6 @@
 /* WORK PROJECTS SECTION */
 #work-projects {
-    background-color: #dee2e6; /* Background color for visibility */
+    background-color:  rgb(233, 232, 241); /* Background color for visibility */
     position: relative; /* Ensure it's the reference point for absolute positioning */
 }
 
